# calcagebra

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  example  example.cal  example.ll  flake.nix  llvm.sh  rust-toolchain.toml  shell.nix
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: publish.yml
.obsidian/: app.json  workspace.json
benches/: bench.rs  interpreter.cal  lexer.js  lexer.rs  lexer.txt  parser.cal  parser.js  parser.txt
docs/: operators.md  std.md  syntax.md  types.md
examples/: example  example.cal  example.ll
scripts/: build-release.sh  install-deps.sh
src/: ast.rs  bin.rs  compiler.rs  data.rs  errors.rs  expr.rs  interpreter.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  standardlibrary.rs  token.rs  types.rs
src/data/: function.rs  mod.rs  set.rs  sizedset.rs  unsizedset.rs
src/standardlibrary/: io.rs  iter.rs  math.rs  mod.rs  operands.rs  operators.rs  types.rs
tests/: assignment.cal  function_declaration.cal  matrix.cal
