[package]
name = "calcagebra"
version = "3.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
codespan-reporting = "0.11.1"
plotters = "0.3.7"
rand = "0.8.5"
rustyline = { version = "14.0.0", features = ["derive"] }
syntect = "5.2.0"
unindent = "0.2.3"
viuer = { version = "0.9.1", features = ["print-file"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
debug = true
